--- a/improved-website-v14/login.html
+++ b/improved-website-v14/login.html
@@ -151,6 +151,11 @@
         const signupTab = document.getElementById('signup-tab');
         const loginForm = document.getElementById('login-form');
         const signupForm = document.getElementById('signup-form');
+
+        function getCsrfToken() {
+            const match = document.cookie.match(/(?:^|;\s*)XSRF-TOKEN=([^;]+)/);
+            return match ? decodeURIComponent(match[1]) : '';
+        }
         
         loginTab.addEventListener('click', () => {
             loginTab.classList.add('bg-white', 'shadow', 'text-gray-900');
@@ -175,7 +180,10 @@
             try {
                 const res = await fetch('/api/auth/login', {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRF-Token': getCsrfToken()
+                    },
                     body: JSON.stringify({ email, password })
                 });
                 if (!res.ok) throw new Error('Login failed');
@@ -200,7 +208,10 @@
             try {
                 const res = await fetch('/api/auth/register', {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRF-Token': getCsrfToken()
+                    },
                     body: JSON.stringify({ email, password, name })
                 });
                 if (!res.ok) throw new Error('Registration failed');
